--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "page.home": "Me & Blog",
+  "page.home": "Home",
   "page.projects": "Projects",
   "page.blog": "Blog",
   "page.about": "About me",
