--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,5 +1,5 @@
 {
-  "page.home": "Hello!",
+  "page.home": "Home",
   "page.projects": "Projekty",
   "page.blog": "Blog",
   "page.about": "O mnie",
