--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,7 @@
   "page.blog": "Blog",
   "page.about": "About me",
   "page.resume": "Résumé",
-  "page.estimate": "Estimate project",
+  "page.estimate": "Estimate Project",
   "page.error": "Not Found",
   "sidebar.bio": "I am interested in programming from the age of 12. It quickly became my passion. In my work I like most that I create something for others."
 }
