--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -4,7 +4,7 @@
   "page.blog": "Blog",
   "page.about": "O mnie",
   "page.resume": "Résumé",
-  "page.estimate": "Estymacja projektu",
+  "page.estimate": "Estymacja Projektu",
   "page.error": "Nie znaleziono",
   "sidebar.bio": "Programowaniem interesuję się od 12 roku życia. Szybko stało się to moją pasją. W swojej pracy najbardziej lubię to, że tworzę coś dla innych."
 }
