--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,4 +1,6 @@
 {
+  "testing_text": "test",
+  "blur_document_title": "Please, come back!",
   "page.home": "Home",
   "page.projects": "Projekty",
   "page.blog": "Blog",
