--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "testing_text": "test",
-  "blur_document_title": "Please, come back!",
+  "blur_document_title": "Cyntler",
   "page.home": "Home",
   "page.projects": "Projects",
   "page.blog": "Blog",
