--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,6 +1,6 @@
 {
   "testing_text": "test",
-  "blur_document_title": "Cyntler",
+  "blur_document_title": "Back to Cyntler",
   "page.home": "Home",
   "page.projects": "Projekty",
   "page.blog": "Blog",
