--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,12 +1,10 @@
 {
   "testing_text": "test",
-  "blur_document_title": "Back to Cyntler",
-  "page.home": "Home",
-  "page.projects": "Projects",
-  "page.blog": "Blog",
-  "page.about": "About me",
-  "page.resume": "Résumé",
-  "page.estimate": "Estimate Project",
-  "page.error": "Not Found",
-  "sidebar.bio": "I am interested in programming from the age of 12. It quickly became my passion. In my work I like most that I create something for others."
+  "home_title": "Home",
+  "projects_title": "Projects",
+  "blog_title": "Blog",
+  "about_title": "About me",
+  "resume_title": "Résumé",
+  "estimate_title": "Estimate project",
+  "not_found_title": "Not found"
 }
