--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,8 @@
   "project_list_title": "Projects",
   "blog_title": "Blog",
   "about_me_title": "About me",
-  "resume_title": "Résumé",
+  "resume_title": "My Résumé",
   "estimate_form_title": "Estimate project",
+  "contact_title": "Contact",
   "not_found_title": "Not found"
 }
