--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -6,5 +6,6 @@
   "about_title": "O mnie",
   "resume_title": "Résumé",
   "estimate_title": "Estymacja Projektu",
+  "contact_title": "Kontakt",
   "not_found_title": "Nie znaleziono"
 }
